tests/baselines/reference/assignFromNumberInterface.errors.txt
tests/cases/conformance/types/primitives/number/assignFromNumberInterface.ts(3,1): error TS2323: Type 'Number' is not assignable to type 'number'.


==== tests/cases/conformance/types/primitives/number/assignFromNumberInterface.ts (1 errors) ====
    var x = 1;
    var a: Number;
    x = a;
    ~
!!! error TS2323: Type 'Number' is not assignable to type 'number'.
    a = x;